--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 // $_SERVER['REMOTE_ADDR']	يقوم بإعادة عنوان اي بي مكان الذي يتصفح المستخدم لموقعك
 
 
-echo  $_SERVER['PHP_SELF']."<br>";
+$txt =   $_SERVER['PHP_SELF']."<br>";
+echo $txt;
+
 echo $_SERVER['SCRIPT_FILENAME']."<br>"; 
 echo  $_SERVER['REMOTE_ADDR']."<br>";
 echo $_SERVER['SERVER_NAME']."<br>";
