--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 // $_SERVER['REMOTE_ADDR']	يقوم بإعادة عنوان اي بي مكان الذي يتصفح المستخدم لموقعك
 
 
-$txt =   $_SERVER['PHP_SELF']."<br>";
+$txt =   $_SERVER['PHP_SELF'];
 echo $txt;
 
 echo $_SERVER['SCRIPT_FILENAME']."<br>"; 
